fix contrast

--- a/web/static/css/_custom.scss
+++ b/web/static/css/_custom.scss
@@ -85,7 +85,7 @@ body {
         url("/images/dm-deco-green-medium.svg"),
         url("/images/dm-deco-green-large.svg"),
         url("/images/dm-deco-gray-large.svg"),
-        url("/images/dm-deco-violet-large.svg"),
+        url("/images/dm-deco-green-large.svg"),
         url("/images/dm-deco-green-medium.svg"),
         url("/images/dm-deco-violet-tiny.svg");
       background-position:
